# ibm-watsonx-orchestrate-adk

./: .gitignore  .secrets.baseline  README.md  pyproject.toml
.sps/: Dockerfile
.sps/utils/: release-to-cp-registry.sh
examples/agent_builder/voice_enabled_deepgram/voice/: voice_deepgram.yaml
examples/evaluations/evaluate/: README.md
examples/evaluations/evaluate/agent_tools/: hr_agent.json
examples/evaluations/evaluate_with_context_variable/: README.md  data_complex.json  data_simple.json  import-all.sh
examples/evaluations/evaluate_with_context_variable/agent_tools/: hr_agent_context.json  tools_context.py
examples/evaluations/evaluate_with_file_upload/: README.md  data_file_upload.json  import-all.sh
examples/evaluations/evaluate_with_file_upload/agent_tools/: hr_agent_file_upload.json  tools_file_upload.py
examples/experimental/agent_builder/customer_care_style/: import-all.sh  sample_webchat.html
examples/experimental/agent_builder/customer_care_style/toolkits/banking_mcp_server/knowledge/: create_vector_index.py  docker-compose.yaml  ingest_document.py  pyproject.toml  register_model_and_create_pipelines.py
examples/experimental/agent_builder/customer_care_style/toolkits/banking_mcp_server/py_server/: README.md  pyproject.toml
examples/experimental/agent_builder/customer_care_style/toolkits/banking_mcp_server/py_server/src/: __init__.py  credit_card.py  credit_card_service.py  customer_database.py  global_store.py  handoff.py  knowledge.py  knowledge_service.py  local_store.py  logger.py  main.py  mortgage.py  mortgage_service.py  personal_banking.py  personal_banking_service.py  server.py  welcome.py
examples/flow_builder/Employee_information/: README.md  import-all.sh
examples/flow_builder/Employee_information/agents/: employee_information_agent.yaml
examples/flow_builder/Employee_information/tools/: employee_information_8879AD.json
examples/flow_builder/collaborator_agents/: README.md  import-all.sh  remove-all.sh
examples/flow_builder/collaborator_agents/agents/: get_city_facts_agent.yaml  get_city_facts_agent_low_code.yaml
examples/flow_builder/collaborator_agents/tools/: collaborator_agents_flow.py  collaborator_agents_flow_low_code.json  get_weather_data.py
examples/flow_builder/document_extractor_structured/tools/: document_extractor_with_tables.py
examples/flow_builder/document_processing/tools/: document_processing_flow.py
examples/flow_builder/hello_message_flow_datamap/tools/: hello_message_flow_datamap.py
examples/flow_builder/recent_transactions/: README.md  import-all.sh
examples/flow_builder/recent_transactions/agents/: recent_transactions.yaml
examples/flow_builder/recent_transactions/tools/: recent_transactions_8979bX.json
examples/flow_builder/user_activity/tools/: user_flow.py
examples/flow_builder/user_activity_with_forms/tools/: user_flow_forms.py
examples/observability/traces/: README.md  export_search_trace_example.py
skills/: README.md
skills/customercare-mcp-builder/: SKILL.md
skills/customercare-mcp-builder/references/: examples.md
skills/sop-builder/: SKILL.md
skills/wxo-builder/: SKILL.md
src/ibm_watsonx_orchestrate/: __init__.py
src/ibm_watsonx_orchestrate/agents/: __init__.py  importer.py
src/ibm_watsonx_orchestrate/cli/: config.py  main.py
src/ibm_watsonx_orchestrate/client/: utils.py
src/ibm_watsonx_orchestrate/flow_builder/: node.py  types.py  utils.py
src/ibm_watsonx_orchestrate/run/: context.py
src/ibm_watsonx_orchestrate/utils/: docker_utils.py  environment.py
tests/agent_builder/connections/: test_connections.py
tests/agent_builder/tools/: test_context.py  test_python_tool.py  test_python_tool_dynamic_schema.py
tests/agent_builder/voice_configurations/: test_voice_configuration.py
tests/agents/: test_importer.py
tests/document_processing/: test_docext_node.py
(+117 files in other folders)
